--- a/src/assets/Product/Product-Card.scss
+++ b/src/assets/Product/Product-Card.scss
@@ -1,3 +1,7 @@
+@import "primereact/resources/themes/lara-light-indigo/theme.css";
+@import "primereact/resources/primereact.min.css";
+@import "primeicons/primeicons.css";
+
 .product-base {
     width: 210px;
     text-align: left;
@@ -9,20 +13,27 @@
     box-sizing: border-box;
     margin: 0 10px 30px;
 
-    .p-card-body {
+    &:hover {
+        box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.08), 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 1px 4px -1px rgba(0, 0, 0, 0.1);
+    }
+
+    .p-card {
         padding: 0px;
-        .p-card-content {
+        .p-card-body {
             padding: 0px;
-        }
-        .p-card-footer {
-            padding: 0px;
+            .p-card-content {
+                padding: 0px;
+            }
+            .p-card-footer {
+                padding: 0px;
+            }
         }
     }
 
     .product-picture {
         width: 210px;
         height: 280px;
-        background: rgb(229, 241, 255) none repeat scroll 0% 0%;
+        background: var(--surface-0) none repeat scroll 0% 0%; //rgb(229, 241, 255) none repeat scroll 0% 0%;
 
         & > img {
             height: 280px;
@@ -32,14 +43,14 @@
 
     a {
         text-decoration: none;
-        color: #282c3f;
+        color: var(--text-color); //#282c3f;
         background-color: transparent;
     }
 
     .product-productMetaInfo {
         position: relative;
         z-index: 3;
-        background: #fff;
+        background: var(--surface-0);
         padding: 0 10px;
         height: 100%;
         margin-top: 12px;
@@ -55,7 +66,6 @@
         font-size: 16px;
         font-weight: bold; //500
         line-height: 1;
-        color: #282c3f;
         margin-bottom: 6px;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -63,7 +73,7 @@
     }
 
     .product-product {
-        color: #535766;
+        color: var(--text-color);
         font-size: 14px;
         line-height: 1;
         margin-bottom: 0;
@@ -78,7 +88,6 @@
     .product-discountedPrice,
     .product-price {
         font-size: 14px;
-        color: #282c3f;
         font-weight: bold; //500
     }
 
@@ -90,14 +99,14 @@
 
     .product-strike {
         text-decoration: line-through;
-        color: #7e818c;
+        color: var(--text-color-secondary); //#7e818c;
         font-weight: 400;
         margin-left: 5px;
         font-size: 12px;
     }
 
     .product-discountPercentage {
-        color: #ff905a;
+        color: var(--primary-color); //#ff905a;
         font-weight: 400;
         font-size: 12px;
         margin-left: 5px;
