changed whislist to add to cart

--- a/src/assets/Product/Product-Card.scss
+++ b/src/assets/Product/Product-Card.scss
@@ -143,7 +143,7 @@
                         outline: none;
                         box-shadow: none;
 
-                        .p-button-label {
+                        /*.p-button-label {
                             display: flex;
                             flex-shrink: 1;
                             flex-direction: row;
@@ -151,9 +151,11 @@
                         }
 
                         .p-button-icon {
-                            margin-left: 30%;
-                            vertical-align: middle;
-                        }
+                            display: flex;
+                            flex-shrink: 1;
+                            flex-direction: row;
+                            justify-content: left;
+                        }*/
                     }
                 }
             }
